[package]
name = "piano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
winapi = { version = "0.3.9", features = [
  "windef",
  "minwindef",
  "winuser",
  "wingdi",
  "libloaderapi",
] }
plotters = "0.3.5"
num = "0.4.1"
plotters-backend = "0.3.5"
cutils = { git = "https://github.com/asakhar/cutils" }
rustfft = "6.1.0"
